# rust_api_vue

back/: README.md
back/api/: .env  Cargo.toml
back/api/migrations/2021-09-11-044448_add_users/: down.sql  up.sql
back/api/src/: config.rs  handlers.rs  main.rs  models.rs  schema.rs
front/: README.md  package-lock.json  package.json
front/public/: index.html
front/src/: App.vue  main.js  router.js
front/src/components/: Home.vue
front/src/components/usuario/: Api.js  ApiUser.js  Listado.vue  Usuario.vue
