[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
#para tener una configuracion y no compilar al cambiarla
dotenv = "0.15.0"
actix-web = "3"
#para usar json. serializar
#serde = "1.0.117"
serde = { version = "1.0.115", features = ["derive"] }
#leer configuracon de diferentes fuentes
config = "0.10.1"
#tokio es un event-drive asyncron app in rust
#Proc-macro library used to map a tokio-postgres row to a Rust type (struct)
tokio-pg-mapper = "0.1.8"
#Proc-macro library used to map a tokio-postgres row to a Rust type (struct)
tokio-pg-mapper-derive = "0.1.5"
#Deadpool is a dead simple async pool for connections and objects of any type.
deadpool-postgres = "0.6.0"
#A native, synchronous PostgreSQL client.
tokio-postgres = "0.6.0"
#consultas a la BD
#postgres = "0.18.1"
