[package]
name = "api"
version = "0.1.0"
authors = ["javier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://docs.rs/crate/actix-web/3.0.1

[dependencies]
#actix-web = "2.0.0"

#cambiamos version para activar cors con actix-cors que depende de la verson 3 de actix-web
actix-web = "3.3.2"

actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"

actix = "0.11.0"
actix-rt = "1.1.1"

#actix-rt = "1.0.0"
#actix-rt = "2.2.0"
actix-cors = "0.5.4"

#https://docs.rs/actix-cors/0.5.4/actix_cors/
#https://crates.io/crates/actix-cors

#email
lettre = "0.9.5"
lettre_email = "0.9.4"

#consultas a la BD
postgres = "0.18.1"
